<resources>

    <string name="app_name">Test</string>
    <string name="hello_world">Hello world!</string>
    <string name="setup_actionbar_settings">Settings</string>
    <string name="setup_activity_title">Setup Jass Game</string>
    <string name="setup_settings_tv_points">Points</string>
    <string name="setup_team_player1_name">Player 1 Name</string>
    <string name="setup_team_chkb_player_type">AI</string>
    <string name="setup_team_player2_name">Player 2 Name</string>
    <string name="setup_actionbar_team1">Team 1</string>
    <string name="setup_actionbar_team2">Team 2</string>
    <string name="setup_actionbar_play">Play</string>
    <string name="setup_menu_settings">Settings</string>
    <string name="menu_item_restart">Restart</string>
    <string name="heartsSymbol">\u2665</string>
    <string name="dimondsSymbol">\u2666</string>
    <string name="spadesSymbol">\u2660</string>
    <string name="clubsSymbol">\u2663</string>
    <string name="undeuffe">\u2191</string>
    <string name="obenabe">\u2193</string>
    <string name="main_activity_title">Jass Game</string>
    <string name="score_title">Score</string>
    <string name="score_you_title">You:</string>
    <string name="score_rival_title">Rival:</string>
    <string name="score_points_initial">0</string>

</resources>