<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/setup_team_tv_player1_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setup_team_player1_name" />

    <EditText
        android:id="@+id/setup_team_et_player1_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <CheckBox
        android:id="@+id/setup_team_chkb_player1_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setup_team_chkb_player_type" />

    <TextView
        android:id="@+id/setup_team_tv_player2_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setup_team_player2_name" />

    <EditText
        android:id="@+id/setup_team_et_player2_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <CheckBox
        android:id="@+id/setup_team_chkb_player2_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setup_team_chkb_player_type" />
</LinearLayout>