<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory 
        android:title="@string/setup_actionbar_settings"
        android:key="category_settings">
        
        <EditTextPreference
            android:key="points"
            android:title="@string/setup_settings_tv_points" 
            android:summary="Number of points a team has to reach to win the game"
            android:dialogTitle="Points"
            android:dialogMessage="Enter a value"    
            android:defaultValue="5000" />
        
        
        <EditTextPreference
            android:key="play_delay"
            android:title="Delay between players" 
            android:summary="Delay between card plays of the different AI players"
            android:dialogTitle="Delay"
            android:dialogMessage="Enter a value in [ms]"    
            android:defaultValue="1000" />   
            
    </PreferenceCategory>

    <PreferenceCategory 
        android:title="@string/setup_actionbar_team1"
        android:key="category_team1">

        <EditTextPreference
            android:key="team1_player1_name"
            android:title="Player 1 Name" 
            android:summary="Name of player 1"
            android:dialogTitle="Enter name"
            android:dialogMessage="Name of player 1"    
            android:defaultValue="Matthias" />

        <CheckBoxPreference 
            android:key="team1_player1_ai"
            android:summary="Activate for computer controlled players"
            android:title="Player 1 AI controlled" 
            android:defaultValue="false"
        />
        
        <ListPreference 
            android:key="team1_player1_ai_strategy"
            android:title="Player 1 AI Strategy"
            android:summary="Choose the strategy that the AI player uses"
            android:defaultValue="" 
            android:entries="@array/preference_ai_strategies"
            android:entryValues="@array/preference_ai_strategy_values"
            android:dependency="team1_player1_ai"
        />    

        <EditTextPreference
            android:key="team1_player2_name"
            android:title="Player 2 Name" 
            android:summary="Name of player 2"
            android:dialogTitle="Enter name"
            android:dialogMessage="Name of player 2"    
            android:defaultValue="Fabien" />

        <CheckBoxPreference 
            android:key="team1_player2_ai"
            android:summary="Activate for computer controlled players"
            android:title="Player 2 AI controlled" 
            android:defaultValue="true"
        />
        
        <ListPreference 
            android:key="team1_player2_ai_strategy"
            android:title="Player 2 AI Strategy"
            android:summary="Choose the strategy that the AI player uses"
            android:defaultValue="" 
            android:entries="@array/preference_ai_strategies"
            android:entryValues="@array/preference_ai_strategy_values"
            android:dependency="team1_player2_ai"
        />        
        
    </PreferenceCategory>

    <PreferenceCategory 
        android:title="@string/setup_actionbar_team2"
        android:key="category_team2">

        <EditTextPreference
            android:key="team2_player1_name"
            android:title="Player 1 Name" 
            android:summary="Name of player 1"
            android:dialogTitle="Enter name"
            android:dialogMessage="Name of player 1"    
            android:defaultValue="Volker" />

        <CheckBoxPreference 
            android:key="team2_player1_ai"
            android:summary="Activate for computer controlled players"
            android:title="Player 1 AI controlled" 
            android:defaultValue="true"
        />
        
        <ListPreference 
            android:key="team2_player1_ai_strategy"
            android:title="Player 1 AI Strategy"
            android:summary="Choose the strategy that the AI player uses"
            android:defaultValue="" 
            android:entries="@array/preference_ai_strategies"
            android:entryValues="@array/preference_ai_strategy_values"
            android:dependency="team2_player1_ai"
        />    

        <EditTextPreference
            android:key="team2_player2_name"
            android:title="Player 2 Name" 
            android:summary="Name of player 2"
            android:dialogTitle="Enter name"
            android:dialogMessage="Name of player 2"    
            android:defaultValue="Stephan" />

        <CheckBoxPreference 
            android:key="team2_player2_ai"
            android:summary="Activate for computer controlled players"
            android:title="Player 2 AI controlled" 
            android:defaultValue="true"
        />
        
        <ListPreference 
            android:key="team2_player2_ai_strategy"
            android:title="Player 2 AI Strategy"
            android:summary="Choose the strategy that the AI player uses"
            android:defaultValue="" 
            android:entries="@array/preference_ai_strategies"
            android:entryValues="@array/preference_ai_strategy_values"
            android:dependency="team2_player2_ai"
        />        
        
    </PreferenceCategory>    
</PreferenceScreen>